--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+.App {
+  height: 100vh;
+  /*background: linear-gradient(110deg, #e7ecf4 50%, #1890ff 50%);*/
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
